--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,11 @@
     }
   ],
   "require": {
-    "php": ">=7.4"
+    "php": ">=5.6"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "squizlabs/php_codesniffer": "^3.7",
-    "swoole/ide-helper": "^4.0"
+    "squizlabs/php_codesniffer": "^3.7"
   },
   "autoload": {
     "psr-4": {
