--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-framework/traits",
-  "description": "",
+  "description": "AdminFramework Traits 提供了一组实用的 PHP Trait，用于快速实现常见的设计模式和功能特性。",
   "type": "library",
   "license": "MIT",
   "version": "1.0.0",
