--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "php": ">=5.6"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0",
-    "squizlabs/php_codesniffer": "^3.7"
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
@@ -29,8 +28,6 @@
     }
   },
   "scripts": {
-    "test": "phpunit tests/",
-    "cs-check": "phpcs --standard=PSR12 src/ tests/",
-    "cs-fix": "phpcbf --standard=PSR12 src/ tests/"
+    "test": "phpunit tests/"
   }
 }
